tests/invalid/function/local_let_rec_duplicate_capture_name.facet
fn main() -> unrestricted isize {
  let y: unrestricted isize = 1 in
  let rec [y, y] f(x: unrestricted isize) -> unrestricted isize {
    x
  }
  in (f 1)
}
